deploy/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-controller-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: controller
  ports:
    - name: control
      port: 9443
      targetPort: control
    - name: admin
      port: 9090
      targetPort: admin
---
apiVersion: v1
kind: Service
metadata:
  name: graph-controller
spec:
  selector:
    app.kubernetes.io/component: controller
  ports:
    - name: control
      port: 9443
      targetPort: control
---
apiVersion: v1
kind: Service
metadata:
  name: graph-node-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: node
  ports:
    - name: bolt
      port: 7687
      targetPort: bolt
    - name: https
      port: 8443
      targetPort: https
    - name: admin
      port: 9090
      targetPort: admin
---
apiVersion: v1
kind: Service
metadata:
  name: graph-bolt
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: node
  ports:
    - name: bolt
      port: 7687
      targetPort: bolt
---
apiVersion: v1
kind: Service
metadata:
  name: graph-https
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: node
  ports:
    - name: https
      port: 443
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  name: graph-node-metrics
  labels:
    graph.usecortex.io/metrics: "true"
spec:
  selector:
    app.kubernetes.io/component: node
  ports:
    - name: metrics
      port: 9090
      targetPort: admin
